[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/LevelTwo/LevelTwoShipSpawns.gd" type="Script" id=1]
[ext_resource path="res://src/LevelTwo/LevelTwo.gd" type="Script" id=2]
[ext_resource path="res://src/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Player/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/AsteroidHazards/AsteroidHazardOne.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/LevelCompleteMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/PixelSpaceRage/PixelBackgroundSeamlessVertically.png" type="Texture" id=8]
[ext_resource path="res://assets/sound_assets/443865__vabsounds__laserattack.ogg" type="AudioStream" id=9]
[ext_resource path="res://src/StandardEnemies/StandardEnemyMedium.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/AdvancedEnemies/AdvancedEnemyEasy.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/StandardEnemies/StandardEnemyEasy.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/AdvancedEnemies/AdvancedEnemyMedium.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/Bosses/LevelTwoBoss.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/misc_assets/transition_screen.png" type="Texture" id=15]

[sub_resource type="Animation" id=2]
resource_name = "backwards_transition"
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionScreen:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -813 ), Vector2( 0, -0.00012207 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "transition"
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionScreen:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -6.10352e-05 ), Vector2( 0, -813 ) ]
}

[node name="LevelTwo" type="Node2D"]
script = ExtResource( 2 )
_asteroid_hazard = ExtResource( 6 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 348.136, 355.099 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 2.01388, 2.03633 )
texture = ExtResource( 8 )
centered = false

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, -813 )
scale = Vector2( 2.01388, 2.03633 )
texture = ExtResource( 8 )
centered = false

[node name="ShipSpawns" type="Node" parent="."]
script = ExtResource( 1 )
_basic_ship = ExtResource( 12 )
_speed_ship = ExtResource( 10 )
_advanced_ship = ExtResource( 11 )
_special_basic_ship = ExtResource( 13 )

[node name="FormationSpawnTimer" type="Timer" parent="ShipSpawns"]
wait_time = 4.5
autostart = true

[node name="SpeedShipSpawnTimer" type="Timer" parent="ShipSpawns"]
wait_time = 9.0
autostart = true

[node name="HazardTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 354.136, 696.786 )

[node name="MusicLoop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -9.087
bus = "Music"

[node name="PauseMenu" parent="." instance=ExtResource( 3 )]

[node name="LevelCompleteMenu" parent="." instance=ExtResource( 7 )]

[node name="LevelTwoBoss" parent="." instance=ExtResource( 14 )]
position = Vector2( 348.136, 153.5 )

[node name="TransitionScreen" type="Sprite" parent="."]
position = Vector2( 0, -0.00012207 )
scale = Vector2( 1.37668, 1.53108 )
texture = ExtResource( 15 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/backwards_transition = SubResource( 2 )
anims/transition = SubResource( 1 )
[connection signal="timeout" from="ShipSpawns/FormationSpawnTimer" to="ShipSpawns" method="_on_FormationSpawnTimer_timeout"]
[connection signal="timeout" from="ShipSpawns/SpeedShipSpawnTimer" to="ShipSpawns" method="_on_SpeedShipSpawnTimer_timeout"]
[connection signal="timeout" from="HazardTimer" to="." method="_on_hazard_timer_timeout"]
[connection signal="pressed" from="PauseMenu/PausePanel/ReturnMenuButton" to="." method="_on_ReturnMenuButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="PauseMenu" method="_on_AnimationPlayer_animation_finished"]

[editable path="PauseMenu"]
